--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ form {
   align-items: center;
 }
 
-form.auth>input {
+form.auth>input,form.auth>select {
   width: 270px;
   border: 1px solid black;
   padding: 10px;
