--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,7 +43,7 @@ span input {
   margin-left: 10px;
 }
 
-.table-header-rotated {
+/* .table-header-rotated {
   border-collapse: collapse;
   border: none;
 }
@@ -58,25 +58,27 @@ span input {
   padding: 10px 5px;
   border: 1px solid #ccc;
 }
- .table-header-rotated th.rotate {
+.table-header-rotated th.rotate {
   height: 140px;
   white-space: nowrap;
   border: none;
 }
- .table-header-rotated th.rotate > div {
+.table-header-rotated th.rotate > div {
   -webkit-transform: translate(25px, 51px) rotate(315deg);
       -ms-transform: translate(25px, 51px) rotate(315deg);
           transform: translate(91px, 21px) rotate(315deg);
   width: 30px;
 }
- .table-header-rotated th.rotate > div > span {
+
+.table-header-rotated th.rotate > div > span {
   border-bottom: 1px solid #ccc;
   padding: 5px 10px;
 }
+
 .table-header-rotated th.row-header {
   padding: 0 10px;
   border-bottom: 1px solid #ccc;
-}
+} */
 
 .caret {
   display: inline-block;
