--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,7 +51,7 @@ form {
 }
 
 .vertical {display: flex; flex-direction: column; align-items: center; padding: 0 5px;}
-.horizontal {display: flex; justify-content: flex-start; align-items: center; }
+.horizontal {display: flex; justify-content: center; align-items: center; }
 .same {box-sizing: border-box; height: 55px; padding: 0px; margin: 0px;}
 /* .vertical.right {padding: 0 80px; } */
 
