--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,7 +47,7 @@
 form {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .vertical {display: flex; flex-direction: column; align-items: center; padding: 0 5px;}
