--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,12 +50,13 @@ form {
   align-items: center;
 }
 
+.center {margin: auto; }
 .sportsList {display: grid; grid-template-columns: repeat(4, 1fr); grid-column-gap: 40px; }
 .center {display: flex; justify-content: center; }
 .container {display: flex; justify-content: center; }
 .narrow {width: 700px; }
 .wide {padding: 0 40px; }
-.vertical {display: flex; flex-direction: column; align-items: center; justify-content: center; justify-items: center; align-content: center; padding: 0 5px;}
+.vertical {display: flex; flex-direction: column; align-items: center; justify-content: center; justify-items: center; align-content: center; padding: 0 60px;}
 .horizontal {display: flex; justify-content: center; align-items: top; }
 .same {box-sizing: border-box; height: 55px; padding: 0px; margin: 0px;}
 /* .vertical.right {padding: 0 80px; } */
@@ -84,6 +85,7 @@ span input {
   width: 200px;
   display: flex;
   justify-content: flex-end;
+  padding: 0 30px;
 }
 
 .checkboxPair>*{
